--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,10 @@
   from = '/*'
   to = 'https://abhijeet-saxena.github.io/:splat'
   status = 200
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "SAMEORIGIN"
+    X-XSS-Protection = "0"
+    X-Content-Type-Options = "nosniff"
+    Content-Security-Policy = "default-src 'self'; style-src 'self'; form-action 'self'; script-src 'self'; connect-src 'self'; img-src 'self'; base-uri 'self';"
